NAND bug in CellPro fixed.

--- a/Documentation/ProSpecRef.tex
+++ b/Documentation/ProSpecRef.tex
@@ -190,10 +190,7 @@ This clause states that whenever the protein \texttt{ara} is absent (\texttt{-ar
 	\item \texttt{s\_get\_signal(signal\_id)}: senses the concentration of a given signal (identified by \texttt{signal\_id}) from the environment.
 	\item \texttt{s\_set\_signal (signal\_id, concentration, x, y)}: Emission of a determinate \texttt{concentration} of a given signal(identified by \texttt{signal\_id}) into the environment (at location (\texttt{x},\texttt{y})).
 	\item \texttt{s\_emit\_cf(signal\_id, concentration, emission\_type)}: Refers to the emission of a signal (identified by \texttt{signal\_id}) into the environment by a given \texttt{concentration}. This directive is related to cross-feeding experiments, meaning the emitted concentration is scaled by a detrimental/beneficial coefficient that is associated to the bacterium’s metabolism. The \texttt{emission\_types} can be: \texttt{"{}exact"{}}, \texttt{"{}area"{}} or \texttt{"{}average"{}}.
-	\item \texttt{s\_absorb\_cf(signal\_id, concentration, benefit, absorption\_type)}: Absorbs a certain \texttt{concentration} of signal (identified by \texttt{signal\_id}) from the environment. This kind of absorption affects cross-feeding experiments. The absorbed concentration triggers a response (represented by \texttt{benefit}: \texttt{-1} is a detrimental effect and \texttt{1} is a beneficial effect) in the metabolism of the bacterium that absorbs. The
-absorbed amount of signal modulates the effect. Signal can be absorbed in four \texttt{types}:
-\texttt{"{}exact"{}}, \texttt{"{}area"{}}, \texttt{"{}average"{}} or \texttt{"{}random"{}}.
-	\textbf{IMPORTANT NOTE}: Using several signals to directly modulate growth of a cell affects the cross-feeding signal emission and in consequence growth. Independent modulation passing through a logic gate is how multiple cross-feeding signal growth modulation should be done. 
+	\item \texttt{s\_absorb\_cf(signal\_id, concentration, benefit, absorption\_type)}: Absorbs a certain \texttt{concentration} of signal (identified by \texttt{signal\_id}) from the environment. This kind of absorption affects cross-feeding experiments. The absorbed concentration triggers a response (represented by \texttt{benefit}: \texttt{-1} is a detrimental effect and \texttt{1} is a beneficial effect) in the metabolism of the bacterium that absorbs. The absorbed amount of signal modulates the effect. Signal can be absorbed in four \texttt{types}: \texttt{"{}exact"{}}, \texttt{"{}area"{}}, \texttt{"{}average"{}} or \texttt{"{}random"{}}.\textbf{IMPORTANT NOTE}: Using several signals to directly modulate growth of a cell affects the cross-feeding signal emission and in consequence growth. Independent modulation passing through a logic gate is how multiple cross-feeding signal growth modulation should be done. 
 	\item \texttt{s\_get\_cf(signal\_id, concentration, benefit)}: Reads a certain concentration of signal (identified by \texttt{signal\_id}) from the environment. This kind of absorption affects cross-feeding experiments. The read concentration triggers a response (represented by  \texttt{benefit}: \texttt{-1} is a detrimental effect and \texttt{1} is a beneficial effect) in the metabolism of the bacterium that is sensing. The read amount of signal modulates the effect. The \textbf{IMPORTANT NOTE} from \texttt{s\_absorb\_cf} holds for this action as well.
 	\item \texttt{s\_absorb\_QS(signal\_id, comparison, threshold, protein)}: Absorbs a certain amount of signal (identified by \texttt{signal\_id}) from the environment. If the absorbed amount satisfies a condition given by a \texttt{comparison} sign (\texttt{"{}<"{}} or \texttt{"{}>"{}}) and a \texttt{threshold}, the genetic element \texttt{protein} is activated. Otherwise, \texttt{protein} is deactivated. \textbf{VERY IMPORTANT NOTE}: any \texttt{protein} defined in an action of this kind CANNOT be used in action conditions.
 	\item \texttt{s\_get\_QS(signal\_id, comparison, threshold, protein)}: Is the same \texttt{action} as the above, except that it does not absorb signal from the environment and only senses. The \textbf{VERY IMPORTANT NOTE} holds for \texttt{proteins} defined by this action as well.
